* Fixed input hint for item tooltips when using a touchscreen.
* Improved file access handling on Android versions 10 and up. This fixes the infinite cutscene loop when starting a new game.
* Fixed memory leak when loading NPCs.
* Entity animations will now fall back to the 'die' animation when 'critdie' isn't defined.
* Improved text rendering by blending text with a copy of itself.

Game updates:

* New formula for the 'Shield' power. Instead of Mental Damage, it is now based off a combination of player level, Mental stat, and Defense stat. This should increase its usefulness on mixed builds.
* Added 'Super' and 'Ultra' variants of Health and Mana potions. They can be obtained through the Alchemy system.
* New icons for Health and Mana potions variants.
* Fixed Alchemist's Skirt so that it works with all potions.
* Prevent the player from damaging Mez before being trapped.
* Made Lezaith immune to slow/stun effects.
* Goblin Thief can now steal all available kinds of potions. Its drop table has also been expanded to make it easier to replenish lost potions.
* Improved contrast for "highlight" state of red square buttons ("close" and "plus").
* The minimap is now gradually revealed as the player explores.

Translation updates:

* Basque (eu) update (aitzkora)
* Scottish Gaelic (gd) update (GunChleoc)
* Norwegian Bokmal (nb) update (Elias Nykrem)
* Polish (pl) update (Pawonashi)



Flare v1.12 (https://flarerpg.org/2021/08/02/flare-1-12/)

Engine features:

* NPC interactions are now canceled when the player is attacked. 'combat_aborts_npc_interact' has been added to engine/misc.txt to control this setting.
* Added 'bar_fill_offset' and 'bar_fill_size' to MenuStatBar and MenuEnemy properties.
* Added support for fading out combat text. See the 'fade_duration' property in engine/combat.txt.