@@ -42,6 +42,7 @@ Engine fixes:
 * Fixed memory leak when loading NPCs.
 * Entity animations will now fall back to the 'die' animation when 'critdie' isn't defined.
 * Improved text rendering by blending text with a copy of itself.
+* Fix infinite loop that could occur when setting unlocked powers.
 
 Game updates:
 
